--- a/package.json
+++ b/package.json
@@ -11,11 +11,9 @@
   },
   "dependencies": {
     "@coinbase/onchainkit": "^0.16.10",
-    "axios": "^1.6.8",
-    "bcrypt": "^5.1.1",
-    "crypto": "^1.0.1",
-    "frog": "^0.11.2",
-    "mongodb": "^6.7.0",
+    "@supabase/supabase-js": "^2.43.4",
+    "axios": "^1.7.2",
+    "bignumber.js": "^9.1.2",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
